objects/ELV_OEM_Fee_Rule__mdt/ELV_OEM_Fee_Rule__mdt.object-meta.xml
<CustomObject>
    <label>OEM Fee Rule</label>
    <pluralLabel>OEM Fee Rules</pluralLabel>
</CustomObject>