objects/ELV_OEM_Fee_Rule__mdt/fields/ELV_Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ELV_Max_Quantity__c</fullName>
    <description>TNCI-208: Inclusive upper quantity bound; blank means no upper bound.</description>
    <label>Maximum Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>