objects/ELV_OEM_Fee_Rule__mdt/fields/ELV_Min_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ELV_Min_Quantity__c</fullName>
    <description>TNCI-208: Inclusive lower quantity bound for this OEM fee rule.</description>
    <label>Minimum Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>