objects/ELV_OEM_Fee_Rule__mdt/fields/ELV_Minimum_Fee_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>ELV_Minimum_Fee_Per_Unit__c</fullName>
    <description>TNCI-208: Annual minimum OEM fee per endpoint or active user.</description>
    <label>Minimum Fee Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>