objects/ELV_OEM_Fee_Rule__mdt/fields/ELV_Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>ELV_Product_SKU__c</fullName>
    <description>TNCI-208: Product SKU to which this OEM fee rule applies.</description>
    <label>Product SKU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>