objects/ELV_OEM_Fee_Rule__mdt/fields/ELV_Prorate_Annual_Minimum__c.field-meta.xml
<CustomField>
    <fullName>ELV_Prorate_Annual_Minimum__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TNCI-208: Indicates whether a qualifying sub-annual minimum fee is prorated.</description>
    <label>Prorate Annual Minimum</label>
    <type>Checkbox</type>
</CustomField>