objects/ELV_OEM_Fee_Rule__mdt/fields/ELV_Royalty_Percent__c.field-meta.xml
<CustomField>
    <fullName>ELV_Royalty_Percent__c</fullName>
    <description>TNCI-208: Royalty percentage used in the OEM fee calculation.</description>
    <label>Royalty Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>